# height-map-ray-tracing

./: .gitignore  Cargo.toml  nodes.csv
src/: bounds.rs  cli.rs  combined_pixel_traversal.rs  curvature.rs  float_utils.rs  intersection.rs  main.rs  map.rs  matrix.rs  node_rays.rs  nodes.rs  ray.rs  ray_z.rs  tests.rs  tile.rs  tile_rays.rs  transform.rs
src/boundary_traversal/: mod.rs  tests.rs
src/combined_pixel_traversal/: mod.rs  tests.rs
src/combined_traversal/: mod.rs  tests.rs
src/download/: mod.rs
src/in_bounds_combined_traversal/: mod.rs  tests.rs
src/pixel_traversal/: mod.rs  tests.rs
src/separate_pixel_traversal/: mod.rs  tests.rs
src/separate_traversal/: mod.rs
src/separate_traversal/x/: mod.rs  tests.rs
src/separate_traversal/y/: mod.rs
src/thin_combined_traversal/: mod.rs  tests.rs
src/tiles/: download.rs  mod.rs
src/traversal/: mod.rs  pixel.rs
src/traversal/boundary/: core.rs  mod.rs  tests.rs
