[package]
name = "height-map-ray-tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
image = "0.25.10"
rayon = "1.11.0"
num-traits = "0.2.19"
tiff = "0.11.3"
indicatif = "0.18.4"
loop-code = "0.5.2"

[profile.release]
codegen-units = 1
lto = "fat"
#debug = true