[package]
name = "height-map-ray-tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
rayon = "1.11.0"
num-traits = "0.2.19"
tiff = "0.11.3"
indicatif = { version = "0.18.4", features = ["rayon"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false

[profile.release]
debug = true

[profile.dev]
opt-level = 1